cluster/apps/default/neko-master/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: neko-master-egress-rfc1918-only
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: neko-master
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 100.64.0.0/10
